Fix disappearing inspection dialog and always-on scrollbars.

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -3223,7 +3223,7 @@ inspection-tree {
     .p-tabpanel {
       flex: 1 1 auto;
       min-height: 0;
-      overflow: scroll;
+      overflow: auto;
       padding: 0.5em;
     }
 
